--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="jquery.bxslider/jquery.bxslider.css">
     <link rel="stylesheet" href="jquery.bxslider/jquery.bxslider.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
@@ -101,85 +102,71 @@
           </div>
       </div>
    </header>
-   <div class="news-section">
+    <div class="contact-form">
        <div class="container">
-       
-          <div class="col-md-4">
-           <ul class="bottom-form">
-               <li>
-                   <h3>STROMPREISE VERGLEICHEN</h3>
-                   <p>Vergleichen Sie jetzt mehrere tausend Tarife und sparen Sie bis zu 500 Euro pro Jahr!</p>
-                   <form action="">
-                      <div class="bottom-form-group">
-                       <input type="text" placeholder="ihre PLZ">
-                      </div>
-                       <div class="bottom-form-group">
-                        <select>
-                            <option>2000 Kwh</option>
-                            <option>3000 Kwh</option>
-                            <option>4000 Kwh</option>
-                            <option>5000 Kwh</option>
-                        </select>
-                    </div>
-                       <a href="#" class="button" type="button">Jetzt vergleichen</a>
-                   </form>
-               </li>
-               <li>
-                   <h3>STROMPREISE VERGLEICHEN</h3>
-                   <p>Vergleichen Sie jetzt mehrere tausend Tarife und sparen Sie bis zu 500 Euro pro Jahr!</p>
-                   <form action="">
-                       <div class="bottom-form-group">
-                       <input type="text" placeholder="ihre PLZ">
-                      </div>
-                       <div class="bottom-form-group">
-                        <select>
-                            <option>2000 Kwh</option>
-                            <option>3000 Kwh</option>
-                            <option>4000 Kwh</option>
-                            <option>5000 Kwh</option>
-                        </select>
-                    </div>
-                       <a href="#" class="button" type="button">Jetzt vergleichen</a>
-                   </form>
-               </li>
+       <h3>Kontakt Formular</h3>
+        <div class="row">
+           <div class="col-md-8">
+            <div class="form-group">
+                <label class="control-label col-sm-4" for="andrede">Andrede:</label>
+                <div class="col-sm-8">
+                  <input type="text" name="andrede">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-4" for="andrede">Vorname:</label>
+                <div class="col-sm-8">
+                  <input type="text" name="andrede">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-4" for="andrede">Name:</label>
+                <div class="col-sm-8">
+                  <input type="text" name="andrede">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-4" for="andrede">Geburtsdatum:</label>
+                <div class="col-sm-8">
+                  <input type="text" name="andrede">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-4" for="andrede">Telefonnummer:</label>
+                <div class="col-sm-8">
+                  <input type="text" name="andrede">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-4" for="andrede">Email Address:</label>
+                <div class="col-sm-8">
+                  <input type="text" name="andrede">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-4" for="andrede">Nachricht:</label>
+                <div class="col-sm-8">
+                  <textarea name="message" id="" rows="10"></textarea>
+                </div>
+            </div>
+            <div class="checkbox-form-group">
+                <input type="checkbox" name="terms" value="terms" class="checkbox"> Ich akzeptiere die <a href="#">Datenschutzbestimmunge.</a><br>
+            </div>
+            <p class=""><a href="contact.html" class="button" type="button"><span class="fa fa-send"></span> senden</a></p>
+            </div>
+            <div class="col-md-4">
+                <ul class="bottom-form animated slideInRight">
                <li>
                    <h3>Geprüft und Zertifiziert</h3>
                    <p>Zertifiziert wurde die Servicequalität des Unternehmens TopTarif, das die Rechnergrundlage bildet.</p>
                    <p><b>Rufen Sie uns an!</b></p>
                    <h3><span class="fa fa-phone"></span> 0800/72 45 816 </h3>
                </li>
-           </ul>   
-          </div>
-        <div class="col-md-8 news">
-            <div class="details">
-                <h2>Versicherungen</h2>
-                <h3>Viele Versicherungsanbieter erhöhen in regelmäßigen Abständen ihre Preise.</h3>
-                <p>Durch einen Verischerungspreisvergleich können sie ermitteln, welche Preise andere Unternehmen für die Versicherung erheben, und welche Anbieter günstige Versicherungspreise anbieten. Mit dem Vergleichsrechner auf Tarifo.de können sie ermitteln wie viel sie durch einen Wechsel zu einem alternativen Anbieter sparen können.</p>
-                <ul>
-                    <li><a href="">KFZ-Versicherung</a></li>
-                    <li><a href="">Motorrad-Versicherung</a></li>
-                    <li><a href="">Rechtsschutzversicherung</a></li>
-                    <li><a href="">Privathaftpflichtversicherung</a></li>
-                    <li><a href="">Tierhalterhaftpflichtversicherung</a></li>
-                    <li><a href="">Haus-und-Grundbesitzerhaftpflichtversicherung</a></li>
-                    <li><a href="">Öltankversicherung</a></li>
-                    <li><a href="">Unfallversicherung</a></li>
-                    <li><a href="">Gesetzliche Krankenversicherung</a></li>
-                    <li><a href="">Private-Krankenversicherung</a></li>
-                    <li><a href="">Private-Krankenzusatzversicherung</a></li>
-                    <li><a href="">Zahnzusatzversicherung</a></li>
-                    <li><a href="">Dread-Disease</a></li>
-                    <li><a href="">Hausratversicherung</a></li>
-                    <li><a href="">Wohngebäudeversicherung</a></li>
-                    <li><a href="">Bauversicherung</a></li>
-                    <li><a href="">Feuerrohbauversicherung</a></li>
-                    <li><a href="">Photovoltaikversicherung</a></li>
-                    <li><a href="">Zum Gasvergleich</a></li>
-                </ul>
+           </ul>
             </div>
         </div>
-       </div>
-   </div>
+        </div>
+    </div>
    <footer>
        <div class="footer-top">
            <div class="container">
