--- a/fragenundantworten.html
+++ b/fragenundantworten.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="jquery.bxslider/jquery.bxslider.css">
     <link rel="stylesheet" href="jquery.bxslider/jquery.bxslider.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
@@ -101,83 +102,68 @@
           </div>
       </div>
    </header>
-   <div class="news-section">
+   <div class="qanda">
        <div class="container">
-       
-          <div class="col-md-4">
-           <ul class="bottom-form">
-               <li>
-                   <h3>STROMPREISE VERGLEICHEN</h3>
-                   <p>Vergleichen Sie jetzt mehrere tausend Tarife und sparen Sie bis zu 500 Euro pro Jahr!</p>
-                   <form action="">
-                      <div class="bottom-form-group">
-                       <input type="text" placeholder="ihre PLZ">
-                      </div>
-                       <div class="bottom-form-group">
-                        <select>
-                            <option>2000 Kwh</option>
-                            <option>3000 Kwh</option>
-                            <option>4000 Kwh</option>
-                            <option>5000 Kwh</option>
-                        </select>
-                    </div>
-                       <a href="#" class="button" type="button">Jetzt vergleichen</a>
-                   </form>
-               </li>
-               <li>
-                   <h3>STROMPREISE VERGLEICHEN</h3>
-                   <p>Vergleichen Sie jetzt mehrere tausend Tarife und sparen Sie bis zu 500 Euro pro Jahr!</p>
-                   <form action="">
-                       <div class="bottom-form-group">
-                       <input type="text" placeholder="ihre PLZ">
-                      </div>
-                       <div class="bottom-form-group">
-                        <select>
-                            <option>2000 Kwh</option>
-                            <option>3000 Kwh</option>
-                            <option>4000 Kwh</option>
-                            <option>5000 Kwh</option>
-                        </select>
-                    </div>
-                       <a href="#" class="button" type="button">Jetzt vergleichen</a>
-                   </form>
-               </li>
-               <li>
-                   <h3>Geprüft und Zertifiziert</h3>
-                   <p>Zertifiziert wurde die Servicequalität des Unternehmens TopTarif, das die Rechnergrundlage bildet.</p>
-                   <p><b>Rufen Sie uns an!</b></p>
-                   <h3><span class="fa fa-phone"></span> 0800/72 45 816 </h3>
-               </li>
-           </ul>   
-          </div>
-        <div class="col-md-8 news">
-            <div class="details">
-                <h2>Versicherungen</h2>
-                <h3>Viele Versicherungsanbieter erhöhen in regelmäßigen Abständen ihre Preise.</h3>
-                <p>Durch einen Verischerungspreisvergleich können sie ermitteln, welche Preise andere Unternehmen für die Versicherung erheben, und welche Anbieter günstige Versicherungspreise anbieten. Mit dem Vergleichsrechner auf Tarifo.de können sie ermitteln wie viel sie durch einen Wechsel zu einem alternativen Anbieter sparen können.</p>
-                <ul>
-                    <li><a href="">KFZ-Versicherung</a></li>
-                    <li><a href="">Motorrad-Versicherung</a></li>
-                    <li><a href="">Rechtsschutzversicherung</a></li>
-                    <li><a href="">Privathaftpflichtversicherung</a></li>
-                    <li><a href="">Tierhalterhaftpflichtversicherung</a></li>
-                    <li><a href="">Haus-und-Grundbesitzerhaftpflichtversicherung</a></li>
-                    <li><a href="">Öltankversicherung</a></li>
-                    <li><a href="">Unfallversicherung</a></li>
-                    <li><a href="">Gesetzliche Krankenversicherung</a></li>
-                    <li><a href="">Private-Krankenversicherung</a></li>
-                    <li><a href="">Private-Krankenzusatzversicherung</a></li>
-                    <li><a href="">Zahnzusatzversicherung</a></li>
-                    <li><a href="">Dread-Disease</a></li>
-                    <li><a href="">Hausratversicherung</a></li>
-                    <li><a href="">Wohngebäudeversicherung</a></li>
-                    <li><a href="">Bauversicherung</a></li>
-                    <li><a href="">Feuerrohbauversicherung</a></li>
-                    <li><a href="">Photovoltaikversicherung</a></li>
-                    <li><a href="">Zum Gasvergleich</a></li>
+          <div class="row">
+           <div class="col-md-8">
+                <ul class="nav nav-tabs">
+                    <li class="active"><a data-toggle="tab" href="#home"><span class="fa fa-home"></span>  <b>Strom</b></a></li>
+                    <li><a data-toggle="tab" href="#menu1"><span class="fa fa-home"></span>  <b>Gas</b></a></li>
+                    <li><a data-toggle="tab" href="#menu2"><span class="fa fa-home"></span> <b>Versicherung </b></a></li>
                 </ul>
-            </div>
-        </div>
+                <div class="tab-content">
+                    <div id="home" class="tab-pane fade in active">
+                        <ul class="question-list">
+                            <li>Wieso kann ich bei einem Anbieterwechsel Geld sparen?</li>
+                            <li>Wie funktioniert ein Stromanbieterwechsel?</li>
+                            <li>WER UBERNIMMT DIE KUNDIGUNG BEIM ALTEN aNBIETER?</li>
+                            <li>WIEVIELE aNBIETER UND tARIFE WERDEN VERGLICHEN?</li>
+                            <li>Welche Daten werden benotigt und sind diese sicher?</li>
+                            <li>Wie lange dauert der Wechsel des Stromanbieters </li>
+                            <li>Worauf muss ich beim stromvergleich achten</li>
+                            <li>Wie wechsel ich den Stromanbieter?</li>
+                            <li>Was muss beim Ausfullen des Antragsformulars beachtet werden?</li>
+                        </ul>
+                    </div>
+                    <div id="menu1" class="tab-pane fade">
+                        <ul class="question-list">
+                            <li>Wieso kann ich bei einem Anbieterwechsel Geld sparen?</li>
+                            <li>Wie funktioniert ein Stromanbieterwechsel?</li>
+                            <li>WER UBERNIMMT DIE KUNDIGUNG BEIM ALTEN aNBIETER?</li>
+                            <li>WIEVIELE aNBIETER UND tARIFE WERDEN VERGLICHEN?</li>
+                            <li>Welche Daten werden benotigt und sind diese sicher?</li>
+                            <li>Wie lange dauert der Wechsel des Stromanbieters </li>
+                            <li>Worauf muss ich beim stromvergleich achten</li>
+                            <li>Wie wechsel ich den Stromanbieter?</li>
+                            <li>Was muss beim Ausfullen des Antragsformulars beachtet werden?</li>
+                        </ul>
+                    </div>
+                    <div id="menu2" class="tab-pane fade">
+                        <ul class="question-list">
+                            <li>Wieso kann ich bei einem Anbieterwechsel Geld sparen?</li>
+                            <li>Wie funktioniert ein Stromanbieterwechsel?</li>
+                            <li>WER UBERNIMMT DIE KUNDIGUNG BEIM ALTEN aNBIETER?</li>
+                            <li>WIEVIELE aNBIETER UND tARIFE WERDEN VERGLICHEN?</li>
+                            <li>Welche Daten werden benotigt und sind diese sicher?</li>
+                            <li>Wie lange dauert der Wechsel des Stromanbieters </li>
+                            <li>Worauf muss ich beim stromvergleich achten</li>
+                            <li>Wie wechsel ich den Stromanbieter?</li>
+                            <li>Was muss beim Ausfullen des Antragsformulars beachtet werden?</li>
+                        </ul>
+                    </div>
+                </div> 
+           </div>
+           <div class="col-md-4">
+               <ul class="bottom-form animated slideInRight">
+                   <li>
+                       <h3>Geprüft und Zertifiziert</h3>
+                       <p>Zertifiziert wurde die Servicequalität des Unternehmens TopTarif, das die Rechnergrundlage bildet.</p>
+                       <p><b>Rufen Sie uns an!</b></p>
+                       <h3><span class="fa fa-phone"></span> 0800/72 45 816 </h3>
+                   </li>
+               </ul>
+           </div>
+           </div>
        </div>
    </div>
    <footer>
