--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <li class="active dropdown"><a href="strom.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">STROM <b class="caret"></b></a>
                         <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Stromvergleich</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Ökostromvergleich</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Ökostromvergleich</a></li><!--
                             <li role="presentation"><a href="#" role="menuitem">Strom Berlin</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Strom Hamburg</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Strom München</a></li>
@@ -60,11 +60,11 @@
                             <li role="presentation"><a href="#" role="menuitem">Strom Frankfurt</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Strom Stuttgart</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Strom Dortmund</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Weitere Städte</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Weitere Städte</a></li>-->
                         </ul>
                     </li>
                     <li class="dropdown "><a href="" id="drop1" data-toggle="" class="dropdown-toggle" role="button">GAS <b class="caret"></b></a>
-                        <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
+                        <!--<ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Gasvergleich</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Gas Berlin</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Gas Hamburg</a></li>
@@ -75,10 +75,10 @@
                             <li role="presentation"><a href="#" role="menuitem">Gas Dortmund</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Gas Essen</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Weitere Städte</a></li>
-                        </ul>
+                        </ul>-->
                     </li>
                     <li class="dropdown "><a href="versicherungen.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">VERSICHERUNGEN <b class="caret"></b></a>
-                        <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
+                        <!--<ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Private Kfz-Versicherung</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Motorrad-Versicherung</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Rechtsschutzversicherung</a></li>
@@ -86,7 +86,7 @@
                             <li role="presentation"><a href="#" role="menuitem">Tierhalterhaftpflichtversicherung</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Haus- und Grundbesitzerhaftpflicht</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Öltankversicherung</a></li>
-                        </ul>
+                        </ul>-->
                     </li>
                     <li class="dropdown "><a href="fragenundantworten.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">FRAGEN UND ANTWORTEN</a>
                     </li>
@@ -106,16 +106,15 @@
    <div class="banner">
        <div class="form animated flipInX">
            <ul class="nav nav-tabs">
-                <li class="active"><a data-toggle="tab" href="#home">Stromvergleich</a></li>
-                <li><a data-toggle="tab" href="#menu1">Gasvergleich</a></li>
-                <li><a data-toggle="tab" href="#menu2">KFZ Versicherung </a></li>
-                <li><a data-toggle="tab" href="#menu3">Krankenversicherung</a></li>
-                <li><a data-toggle="tab" href="#menu4">Privathaftpflicht</a></li>
+                <li class="active"><a data-toggle="tab" href="#home"><span class="fa fa-home"></span>  <b>Stromvergleich</b></a></li>
+                <li><a data-toggle="tab" href="#menu1"><span class="fa fa-home"></span>  <b>Gasvergleich</b></a></li>
+                <li><a data-toggle="tab" href="#menu2"><span class="fa fa-home"></span> <b>KFZ Versicherung </b></a></li>
+                <li><a data-toggle="tab" href="#menu3"><span class="fa fa-home"></span>  <b>Krankenversicherung</b></a></li>
+                <li><a data-toggle="tab" href="#menu4"><span class="fa fa-home"></span>  <b>Privathaftpflicht</b></a></li>
             </ul>
             <div class="tab-content">
                 <div id="home" class="tab-pane fade in active">
                   <form class="form-horizontal">
-                      <div class="row">
                        <div class="col-md-6">
                             <div class="form-group">
                               <label class="control-label col-sm-4" for="email">Postleitzahl :</label>
@@ -132,8 +131,8 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                              <label class="control-label col-sm-5" for="email">Personen im Haushalt:</label>
-                              <div class="col-sm-7">
+                              <label class="control-label col-sm-7" for="email">Personen im Haushalt:</label>
+                              <div class="col-sm-5">
                                 <select name="dropdown" id="dropdown">
                                     <option value="2000">1</option>
                                     <option value="3500">2</option>
@@ -151,7 +150,6 @@
                                 </select>
                               </div>
                             </div>
-                        </div>
                         </div>
                         <p class="center"><a href="stromview.html" class="button" type="button">Jetzt vergleichen</a></p>
                       </form>
