--- a/gasview.html
+++ b/gasview.html
@@ -51,7 +51,7 @@
                     <li class="active dropdown"><a href="strom.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">STROM <b class="caret"></b></a>
                         <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Stromvergleich</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Ökostromvergleich</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Ökostromvergleich</a></li><!--
                             <li role="presentation"><a href="#" role="menuitem">Strom Berlin</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Strom Hamburg</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Strom München</a></li>
@@ -59,11 +59,11 @@
                             <li role="presentation"><a href="#" role="menuitem">Strom Frankfurt</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Strom Stuttgart</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Strom Dortmund</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Weitere Städte</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Weitere Städte</a></li>-->
                         </ul>
                     </li>
-                    <li class="dropdown "><a href="gas.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">GAS <b class="caret"></b></a>
-                        <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
+                    <li class="dropdown "><a href="" id="drop1" data-toggle="" class="dropdown-toggle" role="button">GAS <b class="caret"></b></a>
+                        <!--<ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Gasvergleich</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Gas Berlin</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Gas Hamburg</a></li>
@@ -74,10 +74,10 @@
                             <li role="presentation"><a href="#" role="menuitem">Gas Dortmund</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Gas Essen</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Weitere Städte</a></li>
-                        </ul>
+                        </ul>-->
                     </li>
                     <li class="dropdown "><a href="versicherungen.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">VERSICHERUNGEN <b class="caret"></b></a>
-                        <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
+                        <!--<ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Private Kfz-Versicherung</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Motorrad-Versicherung</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Rechtsschutzversicherung</a></li>
@@ -85,7 +85,7 @@
                             <li role="presentation"><a href="#" role="menuitem">Tierhalterhaftpflichtversicherung</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Haus- und Grundbesitzerhaftpflicht</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Öltankversicherung</a></li>
-                        </ul>
+                        </ul>-->
                     </li>
                     <li class="dropdown "><a href="fragenundantworten.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">FRAGEN UND ANTWORTEN</a>
                     </li>
