--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
        <div class="form animated flipInX">
            <ul class="nav nav-tabs">
                 <li class="active"><a data-toggle="tab" href="#home"><span class="fa fa-home"></span>  <b>Stromvergleich</b></a></li>
-                <li><a data-toggle="tab" href="#menu1"><span class="fa fa-home"></span>  <b>Gasvergleich</b></a></li>
-                <li><a data-toggle="tab" href="#menu2"><span class="fa fa-home"></span> <b>KFZ Versicherung </b></a></li>
-                <li><a data-toggle="tab" href="#menu3"><span class="fa fa-home"></span>  <b>Krankenversicherung</b></a></li>
-                <li><a data-toggle="tab" href="#menu4"><span class="fa fa-home"></span>  <b>Privathaftpflicht</b></a></li>
+                <li><a data-toggle="tab" href="#menu1"><span class="fa fa-plug"></span>  <b>Gasvergleich</b></a></li>
+                <li><a data-toggle="tab" href="#menu2"><span class="fa fa-fire"></span> <b>KFZ Versicherung </b></a></li>
+                <li><a data-toggle="tab" href="#menu3"><span class="fa fa-medkit"></span>  <b>Krankenversicherung</b></a></li>
+                <li><a data-toggle="tab" href="#menu4"><span class="fa fa-shield"></span>  <b>Privathaftpflicht</b></a></li>
             </ul>
             <div class="tab-content">
                 <div id="home" class="tab-pane fade in active">
