--- a/versicherungenview.html
+++ b/versicherungenview.html
@@ -103,45 +103,35 @@
    </header>
    <div class="insurance-section">
        <div class="container">
-           <div class="col-md-4">
-              <h3><a href="versicherungenview.html">Kfz & Haftpflicht</a></h3>
-               <ul class="insurance-list">
-                   <li><a href="versicherungenview.html">KFZ-versicherung </a></li>
-                   <li><a href="versicherungenview.html">Motorradversicherung</a></li>
-                   <li><a href="versicherungenview.html">Privathaftpflicht</a></li>
-                   <li><a href="versicherungenview.html">Hundehaftpflicht</a></li>
-                   <li><a href="versicherungenview.html">Pferdeaftpflicht</a></li>
-               </ul>
+           <div class="col-md-4 i-col">
+              <h3>Privathaftpflicht</h3>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti officia dolor quisquam autem ut cupiditate facilis, ea deserunt suscipit, neque vel quis. Placeat aspernatur magnam itaque doloremque ex delectus nihil.</p>
+                <a href="" class="button">Jetzt vergleichen</a>
            </div>
-           <div class="col-md-4">
-              <h3><a href="versicherungenview.html">Haus & Recht</a></h3>
-               <ul class="insurance-list">
-                   <li><a href="versicherungenview.html">Rechtsschutzversicherung</a></li>
-                   <li><a href="versicherungenview.html">Hausratversicherung</a></li>
-                   <li><a href="versicherungenview.html">Wohngebaudeversicherung</a></li>
-                   <li><a href="versicherungenview.html">Hundekrankenversicherung</a></li>
-                   <li><a href="versicherungenview.html">Reiseversicherung</a></li>
-               </ul>
+           <div class="col-md-4 i-col">
+              <h3>Tierhaftpflicht</h3>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit saepe accusantium inventore animi corporis a assumenda autem dicta nostrum doloremque hic, neque commodi provident repellendus debitis, voluptatum officiis. Facere, sed.</p>
+               <a href="" class="button">Jetzt vergleichen</a>
            </div>
-           <div class="col-md-4">
-              <h3><a href="versicherungenview.html">Risiko & Vorsorge</a></h3>
-               <ul class="insurance-list">
-                   <li><a href="versicherungenview.html">Risikolebensversicherung</a></li>
-                   <li><a href="versicherungenview.html">Unfalversicherung</a></li>
-                   <li><a href="versicherungenview.html">Sterbegeldversicherung</a></li>
-                   <li><a href="versicherungenview.html">Berufsunfahigkeit</a></li>
-                   <li><a href="versicherungenview.html">Rentenversicherung</a></li>
-               </ul>
+           <div class="col-md-4 i-col">
+              <h3>Rechtsschutzversicherung</h3>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro repellat illum ad tenetur est reiciendis earum quo. Voluptatum, accusamus, doloremque? Provident dolorem quia dignissimos cum magni rerum nesciunt ratione doloribus.</p>
+               <a href="" class="button">Jetzt vergleichen</a>
            </div>
-           <div class="col-md-4">
-              <h3><a href="versicherungenview.html">Kfz & Haftpflicht</a></h3>
-               <ul class="insurance-list">
-                   <li><a href="versicherungenview.html">Private Krankenversicherung</a></li>
-                   <li><a href="versicherungenview.html">Gesetzliche Krankenversicherung</a></li>
-                   <li><a href="versicherungenview.html">Zahnzusatzversicherung</a></li>
-                   <li><a href="versicherungenview.html">Heilpraktiker & Brille</a></li>
-                   <li><a href="versicherungenview.html">Krankenhauszusatz</a></li>
-               </ul>
+           <div class="col-md-4 i-col">
+              <h3>Risikolebensversicherung</h3>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam cum animi natus, incidunt, sint non ullam nisi cumque earum ex, officiis fugiat accusamus nesciunt tenetur ipsa mollitia, in saepe sequi?</p>
+               <a href="" class="button">Jetzt vergleichen</a>
+           </div>
+           <div class="col-md-4 i-col">
+              <h3>Hausratversicherung</h3>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam cum animi natus, incidunt, sint non ullam nisi cumque earum ex, officiis fugiat accusamus nesciunt tenetur ipsa mollitia, in saepe sequi?</p>
+               <a href="" class="button">Jetzt vergleichen</a>
+           </div>
+           <div class="col-md-4 i-col">
+              <h3>Gebaudeversicherung</h3>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam cum animi natus, incidunt, sint non ullam nisi cumque earum ex, officiis fugiat accusamus nesciunt tenetur ipsa mollitia, in saepe sequi?</p>
+               <a href="" class="button">Jetzt vergleichen</a>
            </div>
        </div>
    </div>
